syntax = "proto3";

option go_package = "./pb";

package pb;

// --------------------------------- usercenter ---------------------------------

// 用户信息
message User {
  int64 id = 1; //用户ID
  int64 create_time = 2; //创建时间（时间戳）
  int64 update_time = 3; //更新时间（时间戳）
  string mobile = 4; //手机号码
  string password = 5; //用户密码
  string nickname = 6; // 用户昵称
  int64 sex = 7; // 性别（0：男，1：女）
  string avator = 8; //用户头像url
  string info = 9; //用户简介
  int64 is_admin = 10; //是否管理员（0：否，1：是）
  string signature = 11; //个性签名
  string location_name = 12; //位置名称（地址）
  double longitude = 13; //位置精度
  double latitude = 14; //位置纬度
  int64 total_prize = 15; //累计获得的奖品数量
  int64 fans = 16; //粉丝数量
  int64 all_lottery = 17; //总抽奖次数（包括发起的和中奖的）
  int64 initiation_record = 18; //发起抽奖的记录次数
  int64 winning_record = 19; //中奖记录次数
}

// 添加用户请求
message AddUserReq {
  string mobile = 1;            // 手机号码
  string password = 2;          // 用户密码
  string nickname = 3;          // 用户昵称
  int64 sex = 4;                // 性别 (0: 男, 1: 女)
  string avatar = 5;            // 用户头像URL
  string info = 6;              // 用户简介
  int64 is_admin = 7;           // 是否管理员 (0: 否, 1: 是)
  string signature = 8;         // 个性签名
  string location_name = 9;     // 位置名称（地址）
  double longitude = 10;        // 位置经度
  double latitude = 11;         // 位置纬度
  int64 total_prize = 12;       // 累计获得的奖品数量
  int64 fans = 13;              // 粉丝数量
  int64 all_lottery = 14;       // 总抽奖次数（包括发起的和中奖的）
  int64 initiation_record = 15; // 发起抽奖的记录次数
  int64 winning_record = 16;    // 中奖记录次数
}

// 添加用户响应
message AddUserResp {
}

message LoginReq {
  string  authType = 1;
  string  authKey = 2;
  string  password = 3;
}

message LoginResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message RegisterReq {
  string mobile = 1;
  string nickname = 2;
  string password = 3;
  string authKey = 4;
  string authType = 5;
}

message RegisterResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message WxMiniAuthReq {
  string nickname = 1;
  string avatar = 2;
  string authKey = 3;
  string authType = 4;
}

message WxMiniAuthResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message GetUserInfoReq {
  int64 id = 1;
}

message GetUserInfoResp {
  User user = 1;
}

message GenerateTokenReq {
  int64 userId = 1;
}

message GenerateTokenResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message UpdateUserBaseInfoReq {
  int64 id = 1;
  string Nickname = 2;
  int64 sex = 3;
  string avatar = 4;
  string info = 5;
  string signature = 6;
  double longitude = 7;
  double latitude = 8;
}

message UpdateUserBaseInfoResp {
}


// --------------------------------- user_auth ---------------------------------
// 用户认证信息
message UserAuth {
  int64 id = 1;
  int64 createTime = 2; // 创建时间（时间戳）
  int64 updateTime = 3; //更新时间（时间戳）
  int64 userId = 4; //用户id
  string authKey = 5; //平台唯一id
  string authType = 6; //平台类型
}

message GetUserAuthByAuthKeyReq {
  string authKey = 1;
  string authType = 2;
}

message GetUserAuthByAuthKeyResp {
  UserAuth userAuth = 1;
}

message GetUserAuthByUserId {
  int64 userId = 1;
}

message GetUserAuthByUserIdResp {
  UserAuth userAuth = 1;
}

// --------------------------------- user_sponsor ---------------------------------
message UserSponsor {
  int64 id = 1; // id
  int64 userId = 2; // userId
  int64 type = 3; // 1微信号 2公众号 3小程序 4微信群 5视频号
  int64 appletType = 4; // type=3时该字段才有意义，1小程序链接 2路径跳转 3二维码跳转
  string name = 5; // 名称
  string desc = 6; //描述
  string avatar = 7; // 头像
  int64 isShow = 8; //1显示 2不显示
  string qrCode = 9; // 二维码图片地址，type=1 2 3&applet_type=3 4的时候启用
  string inputA = 10; //type=5 applet_type=2 or applet_type=1 输入框A
  string inputB = 11; //type=5 applet_type=2 输入框B
  int64 createTime = 12; // createTime
  int64 updateTime = 13; // updateTime
}

message AddUserSponsorReq {
  int64 userId      = 1;  // userId
  int64 type        = 2;  // 1微信号 2公众号 3小程序 4微信群 5视频号
  int64 appletType  = 3;  // type=3时该字段才有意义，1小程序链接 2路径跳转 3二维码跳转
  string name       = 4;  // 名称
  string desc       = 5;  // 描述
  string avatar     = 6;  // avatar
  int64 isShow      = 7;  // 1显示 2不显示
  string qrCode     = 8;  // 二维码图片地址, type=1 2 3&applet_type=3 4的时候启用
  string inputA     = 9;  // type=5 applet_type=2 or applet_type=1 输入框A
  string inputB     = 10; // type=5 applet_type=2输入框B
}

message AddUserSponsorResp {
  int64 Id          = 1;  // id
}

message UpdateUserSponsorReq {
  int64 id          = 1;  // id
  int64 userId      = 2;  // userId
  int64 type        = 3;  // 1微信号 2公众号 3小程序 4微信群 5视频号
  int64 appletType  = 4;  // type=3时该字段才有意义，1小程序链接 2路径跳转 3二维码跳转
  string name       = 5;  // 名称
  string desc       = 6;  // 描述
  string avatar     = 7;  // avatar
  int64 isShow      = 8;  // 1显示 2不显示
  string qrCode     = 9;  // 二维码图片地址, type=1 2 3&applet_type=3 4的时候启用
  string inputA     = 10; // type=5 applet_type=2 or applet_type=1 输入框A
  string inputB     = 11; // type=5 applet_type=2输入框B
}

message UpdateUserSponsorResp {
}

message DelUserSponsorReq {
  int64 id          = 1;  // id
}

message DelUserSponsorResp {
}

message SearchUserSponsorReq {
  int64 page        = 1;  // page
  int64 limit       = 2;  // limit
  int64 id          = 3;  // id
  int64 userId      = 4;  // userId
  int64 type        = 5;  // 1微信号 2公众号 3小程序 4微信群 5视频号
  int64 appletType  = 6;  // type=3时该字段才有意义，1小程序链接 2路径跳转 3二维码跳转
  string name       = 7;  // 名称
  string desc       = 8;  // 描述
  string avatar     = 9;  // avatar
  int64 isShow      = 10; // 1显示 2不显示
  string qrCode     = 11; // 二维码图片地址, type=1 2 3&applet_type=3 4的时候启用
  string inputA     = 12; // type=5 applet_type=2 or applet_type=1 输入框A
  string inputB     = 13; // type=5 applet_type=2输入框B
  int64 createTime  = 14; // createTime
  int64 updateTime  = 15; // updateTime
}

message SearchUserSponsorResp {
  repeated UserSponsor userSponsor = 1; // userSponsor
}

message SponsorDetailReq {
  int64 id = 1;
}

message SponsorDetailResp {
  int64 id          = 1;  // id
  int64 userId      = 2;  // userId
  int64 type        = 3;  // 1微信号 2公众号 3小程序 4微信群 5视频号
  int64 appletType  = 4;  // type=3时该字段才有意义，1小程序链接 2路径跳转 3二维码跳转
  string name       = 5;  // 名称
  string desc       = 6;  // 描述
  string avatar     = 7;  // avatar
  int64 isShow      = 8;  // 1显示 2不显示
  string qrCode     = 9;  // 二维码图片地址, type=1 2 3&applet_type=3 4的时候启用
  string inputA     = 10; // type=5 applet_type=2 or applet_type=1 输入框A
  string inputB     = 11; // type=5 applet_type=2输入框B
}

message UserInfoForComment{
  int64 id = 1;
  string nickname = 2;
  string avatar = 3;
}

message  GetUserInfoByUserIdsReq{
  repeated int64 userIds = 1;
}

message  GetUserInfoByUserIdsResp{
  repeated UserInfoForComment userInfo = 1;
}

service usercenter {
  rpc login(LoginReq) returns(LoginResp);
  rpc register(RegisterReq) returns(RegisterResp);
  rpc wxMiniAuth(WxMiniAuthReq) returns(WxMiniAuthResp);
  rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
  rpc getUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
  rpc updateUserBaseInfo(UpdateUserBaseInfoReq) returns(UpdateUserBaseInfoResp);
  rpc getUserInfoByUserIds(GetUserInfoByUserIdsReq) returns(GetUserInfoByUserIdsResp);

  rpc getUserAuthByAuthKey(GetUserAuthByAuthKeyReq) returns(GetUserAuthByAuthKeyResp);
  rpc getUserAuthByUserId(GetUserAuthByUserId) returns(GetUserAuthByUserIdResp);

  rpc AddUserSponsor(AddUserSponsorReq) returns (AddUserSponsorResp);
  rpc UpdateUserSponsor(UpdateUserSponsorReq) returns (UpdateUserSponsorResp);
  rpc DelUserSponsor(DelUserSponsorReq) returns (DelUserSponsorResp);
  rpc SearchUserSponsor(SearchUserSponsorReq) returns (SearchUserSponsorResp);
  rpc SponsorDetail(SponsorDetailReq) returns(SponsorDetailResp);
}